# langgraph-layered-context

./: .gitignore  README.md  benchmark_results.json  eval_scenarios.json  gemini_benchmark_results.json  live_eval_results.json  llm_benchmark_results.json  main.py  pyproject.toml  real_benchmark_results.json
docs/: INDEX.md  use_case_code_review.md  use_case_knowledge_base.md  use_case_refactoring.md
examples/: 00_lightweight_test.py  01_basic_workflow.py
paper/: generate_figures.py  references.bib  silicon_mirror_paper.tex
results/: SUMMARY.md
results/n100/: claude_n100.json  gemini_n100.json
results/n437/: gemini_n437.json
results/n50/: cross_judge_n50.json
src/agents/: __init__.py  evaluation.py  orchestrator.py  silicon_mirror.py  trait_classifier.py
src/context/: __init__.py  layers.py
src/extraction/: __init__.py  enrichment.py  entities.py
src/governance/: __init__.py  access_control.py  audit.py  behavioral_access_control.py
src/graph/: __init__.py  layers.py  store.py
src/ingestion/: __init__.py  connectors.py  loaders.py
src/retrieval/: __init__.py  embeddings.py
src/utils/: __init__.py  config.py  logging_util.py
tests/: live_eval_results.py  run_benchmark.py  run_benchmark_parallel.py  run_cross_judge.py  run_gemini_benchmark.py  run_llm_benchmark.py  run_real_benchmarks.py  test_silicon_mirror.py
