[project]
name = "context-rag"
version = "0.1.0"
description = "Layered Context Framework for RAG Systems - Implements hierarchical, governed context delivery with multi-agent support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph & LLM Framework
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",

    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.7.0",

    # Document Processing
    "pypdf>=3.17.0",
    "markdown>=3.5.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",

    # Data Processing & NLP
    "spacy>=3.7.0",
    "networkx>=3.2",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Vector Search & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "motor>=3.3.0",

    # Async & Concurrency
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",

    # Serialization
    "orjson>=3.9.0",

    # Utils
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
rust = ["maturin>=1.0.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0"]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.4.0"]
